2012-04-24  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2012-04-24 mainline r186768.

	PR target/53065
	* config/avr/avr.h (HARD_REGNO_CALL_PART_CLOBBERED): New hook define.

2012-04-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53085
	* tree-ssa-pre.c (eliminate): Do not eliminate volatile redundant
	stores.

2012-04-24  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/53084
	* varasm.c (compute_reloc_for_constant): Handle ADDR_EXPR
	of MEM_REF.
	(output_addressed_constants): Likewise.

	PR middle-end/52999
	* varasm.c (get_section): Don't ICE for section conflicts with
	built-in section kinds.

2012-04-23  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/sync.md (fetchop_name): Change ior attribute to "or".

2012-04-23  Georg-Johann Lay  <avr@gjlay.de>

	* doc/extend.texi (AVR Named Address Spaces): Fix typos.

2012-04-23  Richard Guenther  <rguenther@suse.de>

	PR c/53060
	* c-typeck.c (build_binary_op): Fix typo.

2012-04-23  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimizations/52891
	* tree-vect-patterns.c (adjust_bool_pattern): Use
	build_nonstandard_type even if rhs1 has unsigned INTEGER_TYPE,
	but with non-standard precision.

2012-04-22  Ian Lance Taylor  <iant@google.com>

	* godump.c (go_output_typedef): Dump size of structs.

2012-04-20  Ulrich Weigand  <ulrich.weigand@linaro.org>

	Backport from mainline:

	* config/arm/arm.c (arm_print_operand): Fix invalid alignment
	hints for 'A' operand types.

2012-04-19  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2012-04-19 mainline r186588.

	PR target/53033
	* config/avr/avr.c (avr_out_load_psi): Fix assembler template for
	the case *(X+const).

2012-04-18  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/sync.md (fetchop_name): Change ior attribute to "or".

2012-04-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/53020
	* config/i386/sync.md (atomic_<code><mode>): Rename to
	atomic_<logic><mode>.

2012-04-16  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline