@@ -1,3 +1,8 @@
+2012-04-25  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/52880
+	* gcc.dg/pr52880.c: New test.
+
 2012-04-24  Georg-Johann Lay  <avr@gjlay.de>
 
 	PR testsuite/52641
